lab9/tests/bad/prototype_call_no_dec.al
int foo(void);

// NO DECLARATION!!
// int foo(void)
// begin
// end


int main(void)
begin
   foo();
end
